tests/invalid/import_from_inside_function/main.py
def run_case() -> None:
    from math import exp
    print(exp(0.0))


if __name__ == "__main__":
    run_case()
